--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://localhost:27017/taskdb
+MONGO_URI=mongodb+srv://1407priyankasingh:pRNEjL13RfTxLnUE@bookapi.2twevhu.mongodb.net/
 JWT_SECRET=Jjgdhbejqyfuvqjh
